--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "react-hook-form": "^7.61.1"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "tailwindcss": "^4",
     "typescript": "^5"
   }
 }
